--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "vercel dev",
+    "deploy": "vercel deploy --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +20,9 @@
   },
   "homepage": "https://github.com/neomadara/express-vercel#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "@types/express": "^4.17.13",
+    "express": "^4.18.1",
+    "typescript": "^4.6.4",
+    "vercel": "^24.2.1"
   }
 }
