--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/neomadara/express-vercel#readme",
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "express": "^4.18.1",
+    "express": "^4.16.4",
     "typescript": "^4.6.4",
-    "vercel": "^24.2.1"
+    "vercel": "^19.1.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "tslint": "^5.12.1"
   }
 }
