--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "vercel dev",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "deploy": "vercel deploy --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,10 +23,13 @@
   "dependencies": {
     "express": "^4.16.4",
     "typescript": "^4.6.4",
-    "vercel": "^19.1.2"
+    "vercel": "^19.1.2",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "concurrently": "^7.3.0",
+    "nodemon": "^2.0.19",
     "tslint": "^5.12.1"
   }
 }
