--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/express": "^4.16.1",
     "concurrently": "^7.3.0",
+    "eslint": "^8.20.0",
     "nodemon": "^2.0.19",
     "tslint": "^5.12.1"
   }
