--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "deploy": "vercel deploy --prod",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:functional": "jest --config jest.config.ts --no-cache"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,27 @@
     "url": "https://github.com/neomadara/express-vercel/issues"
   },
   "homepage": "https://github.com/neomadara/express-vercel#readme",
+  "nodemonConfig": {
+    "ignore": [
+      "test/*",
+      "docs/*"
+    ],
+    "delay": 2500,
+    "signal": "SIGTERM"
+  },
   "dependencies": {
     "express": "^4.16.4",
+    "mongoose": "^6.5.0",
     "typescript": "^4.6.4",
     "vercel": "^19.1.2",
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.16.1",
+    "@types/jest": "^28.1.6",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "concurrently": "^7.3.0",
@@ -39,7 +53,10 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
     "tslint": "^5.12.1"
   }
 }
